Text Formatter/tests/error/badparam5.tx
\indent{A}Invalid argument for indent. Should be a positive integer.